<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photo"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="match_parent"
        android:gravity="end"
        >
        <ImageView
            android:id="@+id/photo_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="90dp"
            android:contentDescription="@string/profile"
            />
        <Button
            android:onClick="onTakePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_button"
            android:layout_margin="20dp"
            />
    </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_margin="5dp"
            />
        <EditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name_input"
            android:inputType="text"
            android:layout_margin="5dp"
            android:autofillHints=""
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mail"
            android:layout_margin="5dp"
            />
        <EditText
            android:id="@+id/mail_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/mail_input"
            android:inputType="text"
            android:layout_margin="5dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:layout_margin="5dp"
            />
        <EditText
            android:id="@+id/phone_input"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/phone_input"
            android:layout_margin="5dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:layout_margin="5dp"
            />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            >
            <RadioButton
                android:id="@+id/female_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female_radio"
                android:layout_marginEnd="50dp"
                />
            <RadioButton
                android:id="@+id/male_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male_radio"
                android:layout_marginStart="50dp"
                />
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/class_title"
            android:layout_margin="5dp"
            />
        <EditText
            android:id="@+id/class_input"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/class_input"
            android:layout_margin="5dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/major"
            android:layout_margin="5dp"
            />
        <EditText
            android:id="@+id/major_input"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/major_input"
            android:layout_margin="5dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="match_parent"
            android:gravity="center"
            >

            <Button
                android:layout_width="0dp"
                android:layout_weight=".30"
                android:layout_height="wrap_content"
                android:onClick="onSave"
                android:text="@string/save_button"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="20dp"

                />
            <Button
                android:layout_width="0dp"
                android:layout_weight=".30"
                android:layout_height="wrap_content"
                android:onClick="onCancel"
                android:text="@string/cancel_button"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="20dp"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>